# giotto-arc-agi-data

./: .gitignore  CODE_AUTHORS.md  CODE_OF_CONDUCT.md  CODE_OWNERS.md  GOVERNANCE.md  README.md  pyproject.toml
notebooks/: example_usage.ipynb
src/giotto_arc_agi_data/: __init__.py  consts.py  download.py  load.py  save.py  types.py  visualize.py
src/giotto_arc_data/: __init__.py  consts.py  download.py  load.py  save.py  types.py  visualize.py
test/: test_dataset.py
