[project]
name = "giotto-arc-data"
version = "0.0.1"
description = "Utils for reading synthetic ARC-AGI dataset by Giotto.ai."
readme = "README.md"
requires-python = ">=3.11,<3.15"

authors = [
    { name = "Matteo Caorsi", email = "m.caorsi@giotto.ai" },
    { name = "Matteo Bonotto", email = "m.bonotto@giotto.ai" }
]

dependencies = [
    "numpy",
    "tqdm~=4.67.1",
    "pyarrow~=23.0.0",
    "orjson~=3.11.7",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "matplotlib~=3.10.7",
    "ipykernel~=7.1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["giotto_arc_data*"]
